re PR c++/42761 (std::bind doesn't work for simple class types)

PR c++/42761
	* semantics.c (finish_decltype_type): Within a template, treat
	unresolved CALL_EXPR as dependent.

From-SVN: r155966