gcc/testsuite/g++.dg/cpp0x/decltype22.C
@@ -1,0 +1,13 @@
+// PR c++/42761
+// { dg-options "-std=c++0x" }
+
+template<typename _Tp> _Tp* fn();
+
+template <class T> struct A
+{
+  template <class U,
+	    class S = decltype(fn<T>())>
+  struct B { };
+};
+
+A<int> a;
